--- a/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+++ b/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id,@string/default_web_client_id">
-  <string name="gcm_defaultSenderId" translatable="false">597090314977</string>
-  <string name="google_storage_bucket" translatable="false">bely2-ff44c.appspot.com</string>
-  <string name="project_id" translatable="false">bely2-ff44c</string>
-  <string name="google_api_key" translatable="false">AIzaSyCujOYoN6X9a4ieWp4fFsBpTmZwcNqNodY</string>
-  <string name="google_crash_reporting_api_key" translatable="false">AIzaSyCujOYoN6X9a4ieWp4fFsBpTmZwcNqNodY</string>
-  <string name="google_app_id" translatable="false">1:597090314977:android:d7f3288e8cf1ea0115a5a0</string>
-  <string name="default_web_client_id" translatable="false">597090314977-s2kaeff59bapg0ojmjll72eag58vnr0k.apps.googleusercontent.com</string>
+  <string name="gcm_defaultSenderId" translatable="false">172767507017</string>
+  <string name="google_storage_bucket" translatable="false">peppa-15d90.appspot.com</string>
+  <string name="project_id" translatable="false">peppa-15d90</string>
+  <string name="google_api_key" translatable="false">AIzaSyBPY4Ihdj5PV8l0sGL3isezCiVwT5979Zc</string>
+  <string name="google_crash_reporting_api_key" translatable="false">AIzaSyBPY4Ihdj5PV8l0sGL3isezCiVwT5979Zc</string>
+  <string name="google_app_id" translatable="false">1:172767507017:android:62398b9a0348b444908598</string>
+  <string name="default_web_client_id" translatable="false">172767507017-i412dp7uinr1lttsct00kbdh51lijtm0.apps.googleusercontent.com</string>
 </resources>
